--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
